<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2025 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name" translatable="false">MLKit-GenAI</string>
  <string name="summarization_entry_title_kotlin" translatable="false">Summarization API (Kotlin)</string>
  <string name="summarization_entry_title_java" translatable="false">Summarization API (Java)</string>
  <string name="rewriting_entry_title_kotlin" translatable="false">Rewriting API (Kotlin)</string>
  <string name="rewriting_entry_title_java" translatable="false">Rewriting API (Java)</string>
  <string name="proofreading_entry_title_kotlin" translatable="false">Proofreading API (Kotlin)</string>
  <string name="proofreading_entry_title_java" translatable="false">Proofreading API (Java)</string>
  <string name="image_description_entry_title_kotlin" translatable="false">Image Description API (Kotlin)</string>
  <string name="image_description_entry_title_java" translatable="false">Image Description API (Java)</string>
  <string name="open_prompt_entry_title_kotlin" translatable="false">Open Prompt API (Kotlin)</string>
  <string name="open_prompt_entry_title_java" translatable="false">Open Prompt API (Java)</string>
  <string name="button_send" translatable="false">Send</string>
  <string name="button_select_image" translatable="false">Select Image</string>
  <string name="button_cancel" translatable="false">Cancel</string>
  <string name="generating" translatable="false">Generating...</string>
  <string name="input_message_is_empty" translatable="false">Please enter a non empty message</string>
  <string name="debug_info" translatable="false">Latency: %d ms</string>
  <string name="debug_info_streaming" translatable="false">Latency: first token %d ms, total %d ms</string>
  <string name="base_model_name" translatable="false">Base model name: %s</string>
  <string name="streaming" translatable="false">Streaming</string>
  <string name="streaming_api" translatable="false">Streaming API</string>
  <string name="kotlin_flow" translatable="false">Kotlin Flow</string>
  <string name="streaming_callback" translatable="false">Streaming Callback</string>
  <string name="batch_run" translatable="false">Batch Run</string>
  <string name="action_settings" translatable="false">Settings</string>
  <string name="generation_settings" translatable="false">Generation Settings</string>
  <string name="streaming_output_subtitle" translatable="false">Stream responses as they are generated</string>
  <string name="batch_run_start_message" translatable="false">Start processing...</string>
  <string name="empty" translatable="false"/>
  <string name="input_type_label" translatable="false">Input:</string>
  <string name="output_type_label" translatable="false">Output:</string>
  <string name="language_label" translatable="false">Language:</string>
  <string name="button_change_config" translatable="false">Change config</string>
  <string name="hint_temperature" translatable="false">Temperature</string>
  <string name="hint_top_k" translatable="false">TopK</string>
  <string name="hint_seed" translatable="false">Seed</string>
  <string name="hint_max_output_tokens" translatable="false">MaxOutputTokens</string>
  <string name="hint_candidate_count" translatable="false">CandidateCount</string>
  <string name="hint_enable_thinking" translatable="false">EnableThinking</string>
  <string name="pref_key_enable_thinking" translatable="false">pk_et</string>
  <string name="hint_show_thinking" translatable="false">Show Thought Process</string>
  <string name="pref_key_show_thinking" translatable="false">pk_st</string>
  <string name="pref_key_temperature" translatable="false">pk_temp</string>
  <string name="pref_key_top_k" translatable="false">pk_topk</string>
  <string name="pref_key_max_output_tokens" translatable="false">pk_mot</string>
  <string name="pref_key_seed" translatable="false">pk_seed</string>
  <string name="pref_key_candidate_count" translatable="false">pk_cc</string>
  <string name="pref_key_use_default_config" translatable="false">pk_udc</string>
  <string name="pref_key_use_explicit_cache" translatable="false">pk_uec</string>
  <string name="pref_key_use_structured_output" translatable="false">pk_uso</string>
  <string name="pref_key_use_streaming" translatable="false">pk_us</string>
  <string name="action_simple_api" translatable="false">Use Simple Utility API</string>
  <string name="action_explicit_cache" translatable="false">Use Explicit Prefix Cache</string>
  <string name="action_structured_output" translatable="false">Use Structured Output</string>
  <string name="dialog_title_output_class_schema" translatable="false">Output Class Schema</string>
  <string name="selected_image_preview_for_prompt" translatable="false">Selected Image Preview for Prompt</string>
  <string name="button_add_image" translatable="false">Add Image to Prompt</string>
  <string name="button_save" translatable="false">Save</string>
  <string name="button_add_image_to_prompt" translatable="false">Add Image to Prompt</string>
  <string name="selected_image_thumbnail_preview" translatable="false">Selected Image Thumbnail Preview</string>
  <string name="hint_type_a_message" translatable="false">Ask Open Prompt API</string>
  <string name="hint_add_prompt_prefix" translatable="false">Optional: enter prompt prefix for lower latency</string>
  <string name="hint_add_system_prompt" translatable="false">Optional: enter system prompt</string>
  <string name="hint_add_cache_name" translatable="false">Enter cache name</string>
  <string name="hint_add_prefix_to_cache" translatable="false">Enter prefix to cache</string>
  <string name="hint_add_suffix_for_inference" translatable="false">Enter suffix for inference</string>
  <string name="hint_select_cache_name" translatable="false">Select cache name for inference</string>
  <string name="create_cache" translatable="false">Create cache</string>
  <string name="prefix_to_cache_empty" translatable="false">Prefix to cache cannot be empty</string>
  <string name="warning_prefix_used_with_image" translatable="false">Prompt Prefix cannot be used with image input.</string>
  <string name="message_format_prefix_and_suffix" translatable="false">Prefix:\n%1$s\n\nSuffix:\n%2$s</string>
  <string name="message_format_cache_name_and_suffix" translatable="false">Cache Name:\n%1$s\n\nSuffix:\n%2$s</string>
  <string name="message_format_cache_request" translatable="false">Cache Name:\n%1$s\n\nPrefix to Cache:\n%2$s</string>
  <string name="cache_name_empty" translatable="false">Cache name cannot be empty</string>
  <string name="plant_button_text" translatable="false">Plant</string>
  <string name="schedule_event_button_text" translatable="false">Schedule Event</string>
  <string name="info_button_description" translatable="false">Show schema</string>
  <string name="prefix_cached" translatable="false">Prefix cached</string>
  <string-array name="summarization_input_types" translatable="false">
    <item>Article</item>
    <item>Conversation</item>
  </string-array>
  <string-array name="summarization_output_types" translatable="false">
    <item>One Bullet</item>
    <item>Two Bullets</item>
    <item>Three Bullets</item>
  </string-array>
  <string-array name="summarization_languages" translatable="false">
    <item>English</item>
    <item>Japanese</item>
    <item>Korean</item>
  </string-array>
  <string-array name="rewriting_output_types" translatable="false">
    <item>Elaborate</item>
    <item>Emojify</item>
    <item>Shorten</item>
    <item>Friendly</item>
    <item>Professional</item>
    <item>Rephrase</item>
  </string-array>
  <string-array name="rewriting_languages" translatable="false">
    <item>English</item>
    <item>Japanese</item>
    <item>German</item>
    <item>French</item>
    <item>Italian</item>
    <item>Spanish</item>
    <item>Korean</item>
  </string-array>
  <string-array name="proofreading_input_types" translatable="false">
    <item>Keyboard</item>
    <item>Voice</item>
  </string-array>
  <string-array name="proofreading_languages" translatable="false">
    <item>English</item>
    <item>Japanese</item>
    <item>German</item>
    <item>French</item>
    <item>Italian</item>
    <item>Spanish</item>
    <item>Korean</item>
  </string-array>
  <string name="feature_unavailable" translatable="false">Feature is unavailable.</string>
  <string name="download_failed" translatable="false">Download failed.</string>
  <string name="downloading_model_progress" translatable="false">Downloading model: %1$d / %2$d MB (%3$.2f%%)</string>

</resources>
