<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2025 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical">

  <TextView
      android:id="@+id/debug_info_text_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="4dp"
      android:visibility="gone" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="4dp"
      android:gravity="center_vertical"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="8dp"
          android:text="@string/input_type_label" />

      <Spinner
          android:id="@+id/input_type_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="8dp"
          android:text="@string/output_type_label" />

      <Spinner
          android:id="@+id/output_type_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="8dp"
          android:text="@string/language_label" />

      <Spinner
          android:id="@+id/language_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

    </LinearLayout>

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/request_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />

  </LinearLayout>

</LinearLayout>
